--- a/css/menu.css
+++ b/css/menu.css
@@ -10,7 +10,7 @@ body {
     padding: 20px;
 }
 .news {
-    margin-top: 80px;
+    margin-top: 10px;
     width: 20%;
     padding-right: 20px;
     margin-right: 10%;
@@ -22,6 +22,7 @@ body {
 }
 
 .actions {
+    margin-top: 10px;
     width: 75%;
     display: flex;
     flex-wrap: wrap;
@@ -30,11 +31,11 @@ body {
 
 .action {
     width: 31%;
-    height: 150px;
+    height: 130px;
     background-color: white;
-    margin: 15px;
+    margin: 0px 1% ;
     border-radius: 5px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 .action img{
     width: 100%;
@@ -43,9 +44,9 @@ body {
 
 
 .correo{
-    position: absolute;
+    position: fixed;
     bottom: 50px;
-    width: 150px;
-    margin-left: 20%;
+    width: 10%;
+    margin-left: 19%;
 
 }
