--- a/css/menu.css
+++ b/css/menu.css
@@ -31,7 +31,7 @@ body {
 
 .action {
     width: 31%;
-    height: 130px;
+    height: 25%;
     background-color: white;
     margin: 0px 1% ;
     border-radius: 5px;
